# java-data-postgres

./: .gitignore  Dockerfile  LICENSE  README.md  docker-compose.yml  pom.xml
.github/workflows/: maven-ci.yml
docker/postgres/: Dockerfile
java-data-postgres-bzlmod-bom/: MODULE.bazel  rules_jvm_external++maven+maven_install.json
java-data-postgres-bzlmod-bom/java-data-postgres/: BUILD.bazel  README-BAZEL.md
java-data-postgres-bzlmod-bom/java-data-postgres/docker/postgres/: data.sql
java-data-postgres-bzlmod-bom/java-data-postgres/src/main/java/com/example/accessingdatamysql/: MainController.java
java-data-postgres-bzlmod-bom/java-data-postgres/src/main/resources/: application.properties
java-data-postgres-bzlmod-bom/java-data-postgres/src/test/java/com/example/accessingdatamysql/: AccessingDataMysqlApplicationTests.java  LicenseServiceTest.java
src/main/java/com/example/accessingdatamysql/: License.java  LicenseController.java  LicenseRepository.java  LicenseService.java  User.java  UserRepository.java
src/main/resources/: application.properties
